<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".start.MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bFormulario"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/formulario"
        android:textSize="40sp"
        android:background="@drawable/edge"
        android:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSlot"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edge"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/slot"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:ignore="InvalidId"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCall"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:background="@drawable/edge"
        android:fontFamily="sans-serif-smallcaps"
        android:backgroundTint="#00838F"
        app:layout_constraintHorizontal_bias="0.551"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/call"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSlot"
        app:layout_constraintVertical_bias="0.102" />


</androidx.constraintlayout.widget.ConstraintLayout>